--- a/free-nodes/2025-9-30-free-subscribe-node.htm
+++ b/free-nodes/2025-9-30-free-subscribe-node.htm
@@ -181,16 +181,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-6-free-shadowrocket-node.htm" title="8月6日→20.5M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月6日→20.5M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-free-v2ray-subscribe.htm" title="9月23日→21.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接地址，便宜机场推荐">9月23日→21.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-20-clash-node-daily-updates.htm" title="8月20日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月20日→22.8M/S|2025年最新免费节点SSR/V2ray节点/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-15-free-high-speed-nodes.htm" title="8月15日→22.3M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">8月15日→22.3M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-free-high-speed-nodes.htm" title="9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-2-free-v2ray-subscribe.htm" title="10月2日→22.7M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐">10月2日→22.7M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-node-subscribe.htm" title="9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐">9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-clash.htm" title="9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share.htm" title="9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-clash-subscribe.htm" title="10月7日→21.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">10月7日→21.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-free-node-subscribe-links.htm" title="9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-clash-node.htm" title="9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新">9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-20-free-subscribe-node.htm" title="9月20日→22.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月20日→22.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-shadowrocket-node.htm" title="8月19日→20.7M/S|2025年最新免费节点SSR/Clash节点/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐">8月19日→20.7M/S|2025年最新免费节点SSR/Clash节点/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-ssr-subscribe.htm" title="9月9日→18.2M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月9日→18.2M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-subscribe-node.htm" title="9月30日→19.3M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">9月30日→19.3M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-clash-node-daily-updates.htm" title="8月28日→18.8M/S|2025年最新免费节点Clash节点/SSR/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐">8月28日→18.8M/S|2025年最新免费节点Clash节点/SSR/Shadowrocket节点/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-shadowrocket-node.htm" title="9月3日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">9月3日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-clash-node-daily-updates.htm" title="9月19日→19.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月19日→19.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -202,13 +202,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                     </ul>
     </div>
