--- a/privacy.htm
+++ b/privacy.htm
@@ -180,16 +180,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-node-subscribe.htm" title="9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐">9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-shadowrocket-node.htm" title="9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-shadowrocket-node.htm" title="9月14日→22M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">9月14日→22M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-clash.htm" title="9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-free-subscribe-node.htm" title="9月27日→22.3M/S|2025年最新免费节点SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">9月27日→22.3M/S|2025年最新免费节点SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share.htm" title="9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-clash-node-daily-updates.htm" title="9月19日→19.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月19日→19.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-23-free-v2ray-subscribe.htm" title="9月23日→21.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接地址，便宜机场推荐">9月23日→21.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-16-free-clash.htm" title="9月16日→22.1M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月16日→22.1M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-10-clash-node.htm" title="8月10日→22.4M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐">8月10日→22.4M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-node-subscribe-links.htm" title="8月31日→23M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月31日→23M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-15-free-high-speed-nodes.htm" title="8月15日→22.3M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">8月15日→22.3M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-free-ssr-subscribe.htm" title="8月12日→21.4M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">8月12日→21.4M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-high-speed-nodes.htm" title="9月6日→21.5M/S|2025年最新免费节点SSR/V2ray节点/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月6日→21.5M/S|2025年最新免费节点SSR/V2ray节点/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-clash-windows.htm" title="8月4日→19.2M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR订阅链接地址，便宜机场推荐">8月4日→19.2M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-free-ssr-node.htm" title="9月17日→18.9M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月17日→18.9M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-node-subscribe-links.htm" title="8月9日→19.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">8月9日→19.9M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-clash-node.htm" title="9月29日→22.2M/S|2025年最新免费节点SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐">9月29日→22.2M/S|2025年最新免费节点SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -201,13 +201,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                     </ul>
     </div>
